--- a/style.css
+++ b/style.css
@@ -11,4 +11,8 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background: url(./img/img2.webp);
+    background-position: center;
+    background-size: cover;
+    
 }
