--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(./img/img2.webp);
+    background: url(./img/img3.png);
     background-position: center;
     background-size: cover;
-    
+
 }
