--- a/style.css
+++ b/style.css
@@ -14,5 +14,14 @@ body{
     background: url(img/img4.png);
     background-position: center;
     background-size: cover;
+}
 
+.container{
+    width: 420px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    color: white;
+    padding: 30px 40px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
