--- a/style.css
+++ b/style.css
@@ -71,3 +71,15 @@ body{
 .remember-forgot a:hover{
     text-decoration: underline;
 }
+.login{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    font-size: 16px;
+    color: 333;
+    font-weight: 600;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+}
