--- a/style.css
+++ b/style.css
@@ -83,3 +83,8 @@ body{
     font-weight: 600;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
+.login:hover{
+    background-color: transparent;
+    border: 2px solid rgba(0, 0, 0, .2);
+    color: white;
+}
