--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     color: white;
     padding: 30px 40px;
     box-shadow: rgba(0, 0, 0, .2) 0px 3px 8px;
+    backdrop-filter: blur(30px);
 }
 .container h1{
     font-size: 36px;
