--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
     border-radius: 40px;
     cursor: pointer;
     font-size: 16px;
-    color: 333;
+    color: #333;
     font-weight: 600;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
